Reorganised options Added new Home timeline and Reduce "engagement" option groups and moved some options into them Fixed vertical alignment of checkboxes and labels on iPad Default full-width media to on for when full-width timeline is activated

--- a/options.css
+++ b/options.css
@@ -183,6 +183,7 @@ body.macOS.safari section.group > section > section {
 /* Put controls next to their labels... */
 body.macOS.safari label {
   justify-content: start;
+  align-items: center;
   padding-top: 0;
   padding-bottom: 0;
 }
@@ -266,6 +267,9 @@ body.iOS.safari section.group > label.checkbox ~ section {
 body.iOS.safari form > section.labelled {
   position: relative;
   margin-top: 46px;
+}
+body.iOS.safari form > section:first-child.labelled {
+  margin-top: 12px;
 }
 body.iOS.safari form > section.labelled > label {
   position: absolute;
